--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
   <body>
     <main class="container">
       <section class="details">
-        <img class="photo" src="img/img.jpeg" alt="photo" width="320px" />
+        <img
+          class="photo"
+          src="https://github.com/Glasgalas/CV/blob/master/img/img.JPEG?raw=true"
+          alt="photo"
+          width="320px"
+        />
         <h1 class="title name">
           Alexandr <br />
           Starichenko
