--- a/index.html
+++ b/index.html
@@ -31,13 +31,34 @@
 
         <div class="contacts">
           <h2 class="title">Details</h2>
-          <p class="text">Kyiv, Ukraine</p>
 
           <ul class="list text">
             <li class="listItem">
-              <a class="link" href="tel:380958980526">0958980526</a>
+              <img
+                class="icon"
+                src="/img/googlemaps.svg"
+                alt="maps icon"
+                width="18"
+              />
+              <p class="txt">Kyiv, Ukraine</p>
             </li>
             <li class="listItem">
+              <img
+                class="icon"
+                src="/img/vodafone.svg"
+                alt="phone icon"
+                width="18"
+              />
+              <a class="link phone" href="tel:380958980526">0958980526</a>
+            </li>
+            <li class="listItem">
+              <img
+                class="icon"
+                src="/img/gmail.svg"
+                alt="mail icon"
+                width="18"
+              />
+
               <a class="link" href="mailto:alex.starichenko@icloud.com"
                 >alex.starichenko@icloud.com</a
               >
@@ -49,14 +70,26 @@
           <h2 class="title">Links</h2>
           <ul class="list text">
             <li class="listItem">
+              <img
+                class="icon"
+                src="/img/linkedin.svg"
+                alt="linkedin icon"
+                width="18"
+              />
               <a
                 class="link"
                 target="_blank"
-                href="http://linkedin.com/in/alex-starichenko-00b825214"
+                href="http://linkedin.com/in/alex-starichenko"
                 >LinkedIn</a
               >
             </li>
             <li class="listItem">
+              <img
+                class="icon"
+                src="/img/github.svg"
+                alt="github icon"
+                width="18"
+              />
               <a
                 class="link"
                 target="_blank"
@@ -65,6 +98,12 @@
               >
             </li>
             <li class="listItem">
+              <img
+                class="icon"
+                src="/img/telegram.svg"
+                alt="telegram icon"
+                width="18"
+              />
               <a class="link" target="_blank" href="https://t.me/glasgalas"
                 >Telegram</a
               >
@@ -77,14 +116,60 @@
             <li>
               <h2 class="title">Tech Skills</h2>
               <ul class="list text">
-                <li class="listItem">HTML5</li>
-                <li class="listItem">CSS3</li>
-                <li class="listItem">JavaScript</li>
-                <li class="listItem">React</li>
-                <li class="listItem">Node.js</li>
-                <li class="listItem">MongoDB</li>
-                <li class="listItem">GIT</li>
-                <li class="listItem">REST API</li>
+                <li class="listItem">
+                  <img
+                    class="icon"
+                    src="/img/html5.svg"
+                    alt="html icon"
+                    width="18"
+                  />
+                  <p class="txt">HTML5</p>
+                </li>
+                <li class="listItem">
+                  <img
+                    class="icon"
+                    src="/img/css3.svg"
+                    alt="CSS3 icon"
+                    width="18"
+                  />
+                  <p class="txt">CSS3</p>
+                </li>
+                <li class="listItem">
+                  <img
+                    class="icon"
+                    src="/img/javascript.svg"
+                    alt="JavaScript icon"
+                    width="18"
+                  />
+                  <p class="txt">JavaScript</p>
+                </li>
+                <li class="listItem">
+                  <img
+                    class="icon"
+                    src="/img/react.svg"
+                    alt="React icon"
+                    width="18"
+                  />
+                  <p class="txt">React</p>
+                </li>
+                <li class="listItem">
+                  <img
+                    class="icon"
+                    src="/img/git.svg"
+                    alt="GIT icon"
+                    width="18"
+                  />
+                  <p class="txt">GIT</p>
+                </li>
+                <li class="listItem">
+                  <img
+                    class="icon"
+                    src="/img/svgo.svg"
+                    alt="API icon"
+                    width="18"
+                  />
+                  <p class="txt">REST API</p>
+                </li>
               </ul>
             </li>
             <li>
@@ -113,11 +198,13 @@
         <div class="summary">
           <h2 class="title">Summary</h2>
           <p class="text">
-            I am a Junior Front-End Developer. I am focusing on HTML5, CSS3, JS,
-            React. English - entry level, in the learning process. Ready for
-            remote work. Development, practice and work on the result is
-            important to me. I am ready to learn and improve my developer
-            skills.
+            I am a beginner Web Developer. I am focusing on HTML5, CSS3, JS,
+            React. I chose the front-end direction because I like to create
+            beautiful, user-friendly and responsive websites. I want to become a
+            professional developer, and I believe that perseverance and hard
+            work will help me achieve this goal. At the moment I am looking for
+            interesting projects where I can apply my skills and gain commercial
+            experience.
           </p>
         </div>
         <div class="projects">
@@ -125,12 +212,20 @@
           <ul class="list">
             <li>
               <h3>
-                <a
-                  class="link"
-                  target="_blank"
-                  href="https://mityaua.github.io/final-project-7"
-                  >IceCream</a
-                >
+                <div class="projectItem">
+                  <img
+                    class="icon"
+                    src="/img/icecream.svg"
+                    alt="icecream icon"
+                    width="18"
+                  />
+                  <a
+                    class="link"
+                    target="_blank"
+                    href="https://mityaua.github.io/final-project-7"
+                    >IceCream</a
+                  >
+                </div>
               </h3>
               <p class="text">
                 Ice Cream company site. Neat and tasty design, responsible
@@ -139,12 +234,20 @@
             </li>
             <li>
               <h3>
-                <a
-                  class="link"
-                  target="_blank"
-                  href="https://mityaua.github.io/filmoteka/"
-                  >Filmoteka</a
-                >
+                <div class="projectItem">
+                  <img
+                    class="icon"
+                    src="/img/film.svg"
+                    alt="film icon"
+                    width="18"
+                  />
+                  <a
+                    class="link"
+                    target="_blank"
+                    href="https://mityaua.github.io/filmoteka/"
+                    >Filmoteka</a
+                  >
+                </div>
               </h3>
               <p class="text">
                 Project about searching movies, and adding favorite movies to a
@@ -153,12 +256,20 @@
             </li>
             <li>
               <h3>
-                <a
-                  class="link"
-                  target="_blank"
-                  href="https://glasgalas-search-movie.netlify.app/"
-                  >MovieSearch</a
-                >
+                <div class="projectItem">
+                  <img
+                    class="icon"
+                    src="/img/movie.ico"
+                    alt="movie icon"
+                    width="18"
+                  />
+                  <a
+                    class="link"
+                    target="_blank"
+                    href="https://glasgalas-search-movie.netlify.app/"
+                    >MovieSearch</a
+                  >
+                </div>
               </h3>
               <p class="text">
                 Implementation of a project to consolidate the skills of React
@@ -171,23 +282,11 @@
         </div>
         <div class="workXP">
           <h2 class="title">Work Experience</h2>
-          <h3>Store manager, iStudio, Kyiv</h3>
-          <p class="text">November, 2017 - present</p>
+          <h3>Sales manager, Haier, Kyiv</h3>
+          <p class="text">November, 2021 - present day</p>
 
-          <ul class="list text">
-            <p>Responsibilities:</p>
-            <li class="listItem">
-              ensuring all working procedures in the store
-            </li>
-            <li class="listItem">analysis of work, strategic planning</li>
-            <li class="listItem">
-              completing monthly tasks for key indicators
-            </li>
-            <li class="listItem">
-              control over the implementation of marketing activities
-            </li>
-            <li class="listItem">training new employees</li>
-          </ul>
+          <h3>Sales manager, iStudio, Kyiv</h3>
+          <p class="text">November, 2017 - November, 2021</p>
         </div>
 
         <div class="education">
