--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="listItem">
               <img
                 class="icon"
-                src="../../img/googlemaps.svg"
+                src="img/googlemaps.svg"
                 alt="maps icon"
                 width="18"
               />
