--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li class="listItem">
               <img
                 class="icon"
-                src="/img/vodafone.svg"
+                src="../img/vodafone.svg"
                 alt="phone icon"
                 width="18"
               />
@@ -54,7 +54,7 @@
             <li class="listItem">
               <img
                 class="icon"
-                src="/img/gmail.svg"
+                src="./img/gmail.svg"
                 alt="mail icon"
                 width="18"
               />
