--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
   <body>
     <main class="container">
       <section class="details">
-        <img
-          class="photo"
-          src="https://github.com/Glasgalas/CV/blob/master/img/img.JPEG?raw=true"
-          alt="photo"
-          width="320px"
-        />
+        <img class="photo" src="img/img.jpeg" alt="photo" width="320px" />
         <h1 class="title name">
           Alexandr <br />
           Starichenko
@@ -45,7 +40,7 @@
             <li class="listItem">
               <img
                 class="icon"
-                src="../img/vodafone.svg"
+                src="img/vodafone.svg"
                 alt="phone icon"
                 width="18"
               />
@@ -54,7 +49,7 @@
             <li class="listItem">
               <img
                 class="icon"
-                src="./img/gmail.svg"
+                src="img/gmail.svg"
                 alt="mail icon"
                 width="18"
               />
@@ -72,7 +67,7 @@
             <li class="listItem">
               <img
                 class="icon"
-                src="/img/linkedin.svg"
+                src="img/linkedin.svg"
                 alt="linkedin icon"
                 width="18"
               />
@@ -86,7 +81,7 @@
             <li class="listItem">
               <img
                 class="icon"
-                src="/img/github.svg"
+                src="img/github.svg"
                 alt="github icon"
                 width="18"
               />
@@ -100,7 +95,7 @@
             <li class="listItem">
               <img
                 class="icon"
-                src="/img/telegram.svg"
+                src="img/telegram.svg"
                 alt="telegram icon"
                 width="18"
               />
@@ -119,7 +114,7 @@
                 <li class="listItem">
                   <img
                     class="icon"
-                    src="/img/html5.svg"
+                    src="img/html5.svg"
                     alt="html icon"
                     width="18"
                   />
@@ -128,7 +123,7 @@
                 <li class="listItem">
                   <img
                     class="icon"
-                    src="/img/css3.svg"
+                    src="img/css3.svg"
                     alt="CSS3 icon"
                     width="18"
                   />
@@ -137,7 +132,7 @@
                 <li class="listItem">
                   <img
                     class="icon"
-                    src="/img/javascript.svg"
+                    src="img/javascript.svg"
                     alt="JavaScript icon"
                     width="18"
                   />
@@ -146,7 +141,7 @@
                 <li class="listItem">
                   <img
                     class="icon"
-                    src="/img/react.svg"
+                    src="img/react.svg"
                     alt="React icon"
                     width="18"
                   />
@@ -155,7 +150,7 @@
                 <li class="listItem">
                   <img
                     class="icon"
-                    src="/img/git.svg"
+                    src="img/git.svg"
                     alt="GIT icon"
                     width="18"
                   />
@@ -164,7 +159,7 @@
                 <li class="listItem">
                   <img
                     class="icon"
-                    src="/img/svgo.svg"
+                    src="img/svgo.svg"
                     alt="API icon"
                     width="18"
                   />
@@ -215,7 +210,7 @@
                 <div class="projectItem">
                   <img
                     class="icon"
-                    src="/img/icecream.svg"
+                    src="img/icecream.svg"
                     alt="icecream icon"
                     width="18"
                   />
@@ -237,7 +232,7 @@
                 <div class="projectItem">
                   <img
                     class="icon"
-                    src="/img/film.svg"
+                    src="img/film.svg"
                     alt="film icon"
                     width="18"
                   />
@@ -259,7 +254,7 @@
                 <div class="projectItem">
                   <img
                     class="icon"
-                    src="/img/movie.ico"
+                    src="img/movie.ico"
                     alt="movie icon"
                     width="18"
                   />
