--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </h1>
         <br />
         <p class="position">Junior Web Developer</p>
-        <br />
+
         <div class="contacts">
           <h2 class="title">Details</h2>
 
@@ -66,7 +66,7 @@
             </li>
           </ul>
         </div>
-        <br />
+
         <div class="social">
           <h2 class="title">Links</h2>
           <ul class="list text">
@@ -111,7 +111,7 @@
             </li>
           </ul>
         </div>
-        <br />
+
         <div class="skills">
           <ul class="list">
             <li>
@@ -174,7 +174,6 @@
               </ul>
             </li>
             <li>
-              <br /><br />
               <h2 class="title">Soft skills</h2>
               <ul class="list text">
                 <li class="listItem">Good team player</li>
@@ -184,12 +183,12 @@
             </li>
           </ul>
         </div>
-        <br />
+
         <div class="lang">
           <h2 class="title">Languages</h2>
           <ul class="list text langList">
-            <li class="listItem langItem">Russian</li>
             <li class="listItem langItem">Ukrainian</li>
+            <li class="listItem langItem">Russian</li>
             <li class="listItem langItem">English</li>
             <li class="listItem langItem">Polish</li>
           </ul>
@@ -216,7 +215,7 @@
               <h3>
                 <div class="projectItem">
                   <img
-                    class="icon"
+                    class="projectIcon"
                     src="img/icecream.svg"
                     alt="icecream icon"
                     width="18"
@@ -238,7 +237,7 @@
               <h3>
                 <div class="projectItem">
                   <img
-                    class="icon"
+                    class="projectIcon"
                     src="img/film.svg"
                     alt="film icon"
                     width="18"
@@ -260,7 +259,7 @@
               <h3>
                 <div class="projectItem">
                   <img
-                    class="icon"
+                    class="projectIcon"
                     src="img/movie.ico"
                     alt="movie icon"
                     width="18"
